tests/ui/custom_attribute.stderr
error: cannot find attribute `foo` in the crate root
  --> $DIR/custom_attribute.rs:3:3
   |
LL | #[foo]
   |   ^^^ not found in the crate root

error: cannot find attribute `foo` in this scope
  --> $DIR/custom_attribute.rs:5:7
   |
LL |     #[foo]
   |       ^^^ not found in this scope

error: cannot find attribute `foo` in this scope
  --> $DIR/custom_attribute.rs:7:7
   |
LL |     #[foo]
   |       ^^^ not found in this scope

error: aborting due to 3 previous errors

